--- a/app/css/app.css
+++ b/app/css/app.css
@@ -9,6 +9,9 @@
         margin: auto;
         box-shadow: 8px 8px 8px grey;
     }
+    .thumbnail img.img-responsive {
+        max-width: 290px;
+    }
 }
 
 @media (min-width: 768px) {
@@ -22,6 +25,12 @@
         margin: auto;
         box-shadow: 8px 8px 8px grey;
     }
+}
+
+body {
+    /*background: url(../img/leather-black.jpg) no-repeat center center fixed;*/
+    height: 100vh;
+    width: 100%;
 }
 
 .navbar {
@@ -61,6 +70,14 @@
 .newsContent {
     max-height: 75vh;
     overflow: scroll;
+}
+
+.jumbotron p.contentFullView {
+    font-size: 100%;
+}
+
+p.lead.contentMinView {
+    font-size: 100%;
 }
 
 .authorImg {
