--- a/app/partials/client-news-feed.html
+++ b/app/partials/client-news-feed.html
@@ -34,14 +34,7 @@
 		<div class="col-md-3 side-bar hidden-xs">
 
 			<div class="col-md-12 srchContainer">
-				<div class="input-group">
-					<input type="search" ng-model="search.title" class="form-control" placeholder="Looking for a news ?">
-					<span class="input-group-btn">
-						<button class="btn btn-default" type="button">
-							<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-						</button>
-					</span>
-				</div><!-- class input-group-btn -->
+				<input type="search" ng-model="search.title" class="form-control" placeholder="Looking for a news ?">
 			</div><!-- class col-md-12 srcInput -->
 
 			<div class="col-md-12">
@@ -71,7 +64,7 @@
 				<p class="lead"> {{message}} </p>
 				<div class="container"  id="{{article.id}}" ng-repeat="article in articles | filter:{title: search.title} track by article.id">
 					<div class="thumbnail">
-						<img class="" ng-src="{{article.img_path}}" alt="">
+						<img class="img-responsive" ng-src="{{article.img_path}}" alt="">
 						<div class="caption">
 							<h3 class="lead text-left"> {{article.title}}  <small><em> — {{article.timestamp}} </em></small></h3>
 							<p> {{article.content | preview}} </p>
@@ -97,7 +90,7 @@
 						<button ng-show="currentUser.role === 'admin'" class="btn btn-danger pull-right" ng-click="delete(article.id)"> Delete </button>
 						<h4 class="text-left lead media-heading"> {{article.title}} <small><em> — {{article.timestamp}} </em></small></h4>
 						<h5 class="text-left"><small><em> by {{article.username}} </em></small></h5>
-						<p class="text-justify preview"> {{article.content | preview}} </p>
+						<p class="lead contentMinView"> {{article.content | preview}} </p>
 						<a ng-click="readMore(article.id)"  class="btn btn-primary"> Read More </a>
 					</div><!-- class media-body -->
 
@@ -112,7 +105,7 @@
 					<button type="button" class="close pull-right" ng-click="closeArticle()" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 					<img class="center-block img-circle" ng-src="{{currentArticle.img_path}}" alt="" width="150" height="150">
 					<h2 class="lead"> {{currentArticle.title}} <small><em> — {{currentArticle.timestamp}} </em></small></h2>
-					<p class="text-justify"> {{currentArticle.content}} </p>
+					<p class="contentFullView text-justify"> {{currentArticle.content}} </p>
 					<cite><em> by {{currentArticle.username}} </em></cite>
 					<button type="button" class="close pull-right" ng-click="closeArticle()" aria-label="Close"><span aria-hidden="true">&times;</span>
 				</div><!-- class container-fluid jumbotron -->
