--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -125,6 +125,10 @@
 			</div><!-- class row -->
 		</form><!-- named signUpForm -->
 
+		<div ng-show"submitted">
+			
+		</div>
+
 	</div><!-- class container -->
 
 </div><!-- class container text-center -->
