--- a/app/partials/client-activation.html
+++ b/app/partials/client-activation.html
@@ -1,11 +1,13 @@
 <div ng-init="activate()">
 
-	<div ng-show="activated">
-		You're account has been activated you can now log in.
+	<div class="page-header" ng-show="activated">
+		<h1> Activation success </h1>
+		<p class="lead"> You're account has been activated you can now log in. </p>
 	</div>
 
-	<div ng-hide="activated">
-		There was a problem activating you're account.
+	<div class="page-header" ng-hide="activated">
+		<h1> Activation failure </h1>
+		<p class="lead"> There was a problem activating you're account. </p>
 	</div>
-	
+
 </div>
