--- a/app/css/app.css
+++ b/app/css/app.css
@@ -12,6 +12,9 @@
     .thumbnail img.img-responsive {
         max-width: 290px;
     }
+    .footer {
+        display: none;
+    }
 }
 
 @media (min-width: 768px) {
@@ -25,12 +28,23 @@
         margin: auto;
         box-shadow: 8px 8px 8px grey;
     }
+    .container {
+        width: 90%;
+    }
 }
 
 body {
     background: url(../img/blur.jpg) center center no-repeat fixed;
-    height: 100vh;
     width: 100%;
+}
+
+.view-container {
+    height: 90vh;
+}
+
+.navbar-default.footer {
+    background-color: transparent;
+    border-color: transparent;
 }
 
 .navbar {
@@ -74,7 +88,7 @@ body {
 }
 
 .newsContent {
-    max-height: 75vh;
+    max-height: 70vh;
     overflow: scroll;
 }
 
