--- a/app/partials/reset-password.html
+++ b/app/partials/reset-password.html
@@ -1,4 +1,6 @@
-<form action="" name="resetPasswordForm">
-	<input type="email" name="email" id="email" ng-model="reset.email">
-	<button type="submit">GO</button>
-</form>
+<div ng-controller="ResetPasswordCtrl">
+	<form action="" name="resetPasswordForm" ng-submit="sendEmail(reset)" novalidate>
+		<input type="email" name="email" id="email" ng-model="reset.email">
+		<button type="submit">GO</button>
+	</form>
+</div>
