--- a/app/partials/change-password.html
+++ b/app/partials/change-password.html
@@ -1,6 +1,35 @@
-<form name="newPasswordForm" ng-submit="resetPassword(credentials)">
-	<input type="email" name="email" id="email" ng-model="credentials.email">
-	<input type="password" name="password" id="password" ng-model="credentials.password">
-	<input type="password" name="pasword_confirmation" id="password_confirmation" ng-model="credentials.password_confirmation">
-	<button type="submit">Reset</button>
-</form>
+<div class="container text-center"  ng-controller="ResetPasswordCtrl">
+
+	<div class="page-header">
+		<h1> Change your password ! </h1>
+		<p class="lead"> Please fill the form to change your password account. </p>
+	</div>
+
+	<div class="col-md-4 col-md-offset-4">
+		<form name="newPasswordForm" ng-submit="resetPassword(credentials)">
+			
+			<div class="input-group">
+				<span class="input-group-addon">
+					<span class="glyphicon glyphicon-envelope"></span>
+				</span>
+				<input type="email" name="email" class="form-control" id="email" ng-model="credentials.email" required>
+			</div><!-- class input-group -->
+
+			<div class="input-group">
+				<span class="input-group-addon">
+					<span class="glyphicon glyphicon-lock"></span>
+				</span>
+				<input type="password" name="password" class="form-control" id="password" ng-model="credentials.password" required>
+			</div><!-- class input-group -->
+
+			<div class="input-group">
+				<span class="input-group-addon">
+					<span class="glyphicon glyphicon-check"></span>
+				</span>
+				<input type="password" name="pasword_confirmation" class="form-control" id="password_confirmation" ng-model="credentials.password_confirmation" required>
+			</div><!-- class input-group -->
+
+			<button type="submit"> Reset </button>
+		</form>
+	</div>
+</div>
